// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector should be vertical and match snapshot 1`] = `
<styled.div
  vertical={true}
>
  <styled.span
    $enabled={true}
    $selected={false}
    as={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "Link",
        "propTypes": Object {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      }
    }
    key="en"
    onClick={[Function]}
    to="/augsburg/en/"
  >
    <styled.div>
      English
    </styled.div>
    English
  </styled.span>
  <styled.span
    $enabled={true}
    $selected={true}
    as={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "Link",
        "propTypes": Object {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      }
    }
    key="de"
    onClick={[Function]}
    to="/augsburg/de/"
  >
    <styled.div>
      Deutsch
    </styled.div>
    Deutsch
  </styled.span>
  <styled.span
    $enabled={false}
    $selected={false}
    as={[Function]}
    flow="up"
    key="fr"
    text="random tooltip"
  >
    <styled.div>
      Französisch
    </styled.div>
    Französisch
  </styled.span>
</styled.div>
`;

exports[`Selector should match snapshot 1`] = `
<styled.div
  vertical={false}
>
  <styled.span
    $enabled={true}
    $selected={false}
    as={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "Link",
        "propTypes": Object {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      }
    }
    key="en"
    onClick={[Function]}
    to="/augsburg/en/"
  >
    <styled.div>
      English
    </styled.div>
    English
  </styled.span>
  <styled.span
    $enabled={true}
    $selected={true}
    as={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "Link",
        "propTypes": Object {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      }
    }
    key="de"
    onClick={[Function]}
    to="/augsburg/de/"
  >
    <styled.div>
      Deutsch
    </styled.div>
    Deutsch
  </styled.span>
  <styled.span
    $enabled={false}
    $selected={false}
    as={[Function]}
    flow="up"
    key="fr"
    text="random tooltip"
  >
    <styled.div>
      Französisch
    </styled.div>
    Französisch
  </styled.span>
</styled.div>
`;
